
      - Fixed outdated transaction.commit(1) call in 
        ZODBMountPoint.SimpleTrailblazer

      - Launchpad #239636:  Ensure that HEAD requests lock an empty body
        for NotFound errors.

      - Launchpad #229549:  Don't ignore 'debug' flag when rendering
        page templates (thanks to Eric Steele for the patch).

  Zope 2.10.6 (2008/05/10)

    Bugs fixed

      - Launchpad #142350: Display description for properties as row title,
        if present.

      - Launchpad #200007: DateTime(anotherDateTime) now preserves the
        timezone.

      - Launchpad #213311:  Handle "unsubscriptable object" errors
        during publishing traversal.

      - Launchpad #143813: zopectl now exits non-zero when
        child processes fail.

      - Launchpad #173658:  Removed dead code in OFS.Traversable's
        'unrestrictedTraverse' (apparent NameError).

      - Launchpad #198274:  "empty" ZopePageTemplates could not be
        unpickled.

      - zope.security: switched to use standalone 3.3.3 version, which
        contains a backport of a huge performance bugfix from the 3.4 branch.

      - Launchpad #164783: Indexes were migrated on initial creation of a
        ZODB.

  Zope 2.10.5 (2007/10/30)

    Other changes

      - Turned deprecation warnings for manage_afterAdd, manage_beforeDelete
        and manage_afterClone methods into discouraged warnings. These methods
        will not be removed in Zope 2.11, but stay for the foreseeable future.
        Using events is still highly encouraged.

    Bugs fixed

      - Launchpad #147201: treat container-class in zope.conf as a string,
        making it possible to use types from extra products directories.

      - Collector #2358: backported fix making 'Products' package a real
        "namespace package" from the trunk.

      - Collector #2287: form ':record' objects did not implement enough of
        the mapping interface.

      - Collector #2352: fix in OFS.Traversable
